--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -61,6 +61,7 @@ img{
 
 /* site-header */
 .site-header{
+    flex-shrink: 0;
     background-image: url(../img/bg-mg.svg);
     height: 156px;
     background-size: cover;
