--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -134,7 +134,7 @@ img{
     padding: 6px 8px 4px 8px;   
     font-weight: 700;
     color: var(--card-bg-color);
-    background-color:#222;
+    background-color:#2B3939;
     font-size: 11px;
     line-height: 14px;
     letter-spacing:-0,04px;
